[gd_scene load_steps=12 format=2]

[ext_resource path="res://game/PlayerTemplate.gd" type="Script" id=1]
[ext_resource path="res://assets/test_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/pieces/money.png" type="Texture" id=3]
[ext_resource path="res://assets/Comfortaa-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/pieces/player_template_background.png" type="Texture" id=5]
[ext_resource path="res://game/cards/LastCard.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/Inventory.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/map_creation/Houses.gd" type="Script" id=8]
[ext_resource path="res://assets/pieces/prefectus_magnus.png" type="Texture" id=9]
[ext_resource path="res://assets/pieces/haus.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 20
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="PlayerTemplate" type="Node2D" groups=[
"server",
]]
script = ExtResource( 1 )

[node name="Colonists" type="YSort" parent="."]

[node name="Houses" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainContainer" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="CanvasLayer/MainContainer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="CanvasLayer/MainContainer/Container"]
margin_right = 600.0
margin_bottom = 328.0
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="CanvasLayer/MainContainer/Container"]
margin_left = 112.0
margin_top = 24.0
margin_right = 272.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "preview"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="CanvasLayer/MainContainer/Container" instance=ExtResource( 7 )]
margin_left = 8.0
margin_top = 88.0
margin_right = 48.0
margin_bottom = 128.0

[node name="MoneyContainer" type="Control" parent="CanvasLayer/MainContainer/Container"]
margin_left = -16.0
margin_top = 64.0
margin_right = 24.0
margin_bottom = 104.0
rect_scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MainContainer/Container/MoneyContainer"]
margin_left = 12.0
margin_top = -28.0
margin_right = 52.0
margin_bottom = 12.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/MainContainer/Container/MoneyContainer"]
margin_left = 52.0
margin_top = -24.0
margin_right = 92.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastCard" parent="CanvasLayer/MainContainer/Container" instance=ExtResource( 6 )]
margin_left = 464.0
margin_top = 112.0
margin_right = 584.76
margin_bottom = 293.2
rect_min_size = Vector2( 124, 190 )

[node name="Prefectus" type="TextureRect" parent="CanvasLayer/MainContainer/Container"]
visible = false
margin_left = 464.0
margin_top = 8.0
margin_right = 831.0
margin_bottom = 241.0
rect_scale = Vector2( 0.34, 0.34 )
texture = ExtResource( 9 )

[node name="HouseCount" type="Control" parent="CanvasLayer/MainContainer/Container"]
margin_left = 416.0
margin_top = 24.0
margin_right = 456.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/MainContainer/Container/HouseCount"]
margin_left = -40.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MainContainer/Container/HouseCount"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 10 )

[node name="OpenClose" type="Button" parent="CanvasLayer/MainContainer"]
margin_left = 600.0
margin_top = 136.0
margin_right = 656.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 2 )
text = "<<"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="CanvasLayer/MainContainer/Container/LastCard" to="CanvasLayer/MainContainer/Container/LastCard" method="_on_LastCard_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MainContainer/Container/LastCard" to="CanvasLayer/MainContainer/Container/LastCard" method="_on_LastCard_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/MainContainer/OpenClose" to="." method="_on_OpenClose_pressed"]
